--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,11 @@ a.small {
   margin: 0;
   padding: 10px 10px 0 10px;
   border-bottom: 1px dotted black;
+  opacity: .9;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .artistlist a {
@@ -259,6 +264,10 @@ a.small {
 
 .artistlist li:hover {
   background: #FDF6E3;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .artist img {
@@ -311,3 +320,9 @@ a.small {
 .artistinfo .btn {
 
 }
+
+.artist.ng-enter.ng-enter-active,
+.artist.ng-leave{opacity: 1; height: 80px; overflow: hidden;}
+
+.artist.ng-leave.ng-leave-active,
+.artist.ng-enter{opacity: 0; height: 0; overflow: hidden;}
