--- a/partials/list.html
+++ b/partials/list.html
@@ -20,8 +20,8 @@
             descending
         </label>
     </div>
-    <ul class="artistlist">	                
-        <li class="artist cf" ng-repeat="item in artists | filter:query | orderBy: artistOrder:direction">
+    <ul class="artistlist" ng-show="query">	                
+        <li ng-animate="'animage'"class="artist cf" ng-repeat="item in artists | filter:query | orderBy: artistOrder:direction">
             <a href="#/details/{{artists.indexOf(item)}}">
             <img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}" title="Photo of {{item.name}}">
             <div class="info">
